fix: planetiler reads multiple continent PBFs instead of osmium merge
osmium merge produces duplicate nodes at continent boundaries,
causing planetiler to fail with 'Nodes must be sorted ascending by ID'.

Instead, download all continent PBFs into data/input/ and let
Seamarks.java add each as a separate OSM source. Planetiler handles
multi-source input natively and deduplicates correctly.

Also fix continent job artifact download (added merge-multiple: true).